News for package rnirs

##----------------- Version 1.8-1

- Change argument value in function inlr

- Function lmridge renamed to rr

- Argument "square" in function wdist

- Various internal modifications


##----------------- Version 1.8-0

- Function matpoly renamed to "inls"

- Function out.pca renamed to "out.sdod"

- Modifiaction of function out.eucl

- Argument "weights" added to fonction pca.rob

- New functions

  kpls.nipals         Kernel NIPALS PLS (Rosipal & Trejo 2001) 
  kplsr               Kernel PLSR (using kpls.nipals)
  kplsda, kplsdalm    Kernel PLSDA (using kpls.nipals)
  kgram               Kernel Gram matrices for direct kernel regressions
  pls.rob             Robust PLS algorithm (robust PCA and WPLS) 
  pls.iw              Robust PLS algorithm (iterative Re-Weighting)
  

##----------------- Version 1.7-6

- New functions

    pcdalm    PCDA
    krr       Kernel ridge regression
    kpcr      Kernel PCR
    kpcda     Kernel PCDA
    kpcdalm   Kernel PCDA
    
    
##----------------- Version 1.7-5

- Overall code cleaning and consistency modifications


##----------------- Version 1.7-4

- Modification of functions pinv and lmridge


##----------------- Version 1.7-3

- New function: lmridge


##----------------- Version 1.7-2

- Internal modifications of functions pca, pcr, plsr, plsda, plsdalm


##----------------- Version 1.7-1

- New function: pca.eigenk

- Structural modification of functions pca.svd, pca.eigen and pca.eigen


##----------------- Version 1.7-0

- New functions:

    kpca    : Non-linear kernel PCA
  
    Kernel functions    : kpol, krbf
  
    matpoly   : Blocks for INLR regerssion model
    
    pcr     : PCR
    
    pcda    : PCDA (discrimination on principal components)
  
  
- Modification of function bcoef

- Internal modifications (output structure) of functions pca, pls, plsr, lwplsr, lwplsda, lwplsdalm

- New argument "colblocks" in functions blocscal, blockpls, blocksopca, blocksopls. 

