@@ -2,11 +2,17 @@ News for package rnirs
 
 ##----------------- Version 1.8-1
 
-- Change argument value in function inlr
+- New functions
+
+    darr    DA with linear ridge regression 
+  
+    dakrr   DA with non linear kerbel ridge regression 
 
 - Function lmridge renamed to rr
 
-- Argument "square" in function wdist
+- Change argument value in function inlr
+
+- New argument "square" in function wdist
 
 - Various internal modifications
 
